--- a/pages/gradeProdutos.html
+++ b/pages/gradeProdutos.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <header>
+ <header>
     <div id="containerHeader">
       <a href="../index.html">
         <img src="https://cdn.iconscout.com/icon/free/png-256/free-imagem-quadrado-3604303-3004161.png?f=webp" alt=""
@@ -24,6 +24,7 @@
       </div>
 
       <div id="navContent">
+        <a href="./produto.html">PAGINA INICIAL</a>
         <a href="./gradeProdutos.html">PRODUTOS</a>
         <a href="./promocoes.html">PROMOÇÃO</a>
         <a href="./mapa.html">ENDEREÇO</a>
@@ -46,6 +47,7 @@
       </div>
     </div>
   </header>
+
 
     <div class="grid">
         <div class="produto">
@@ -121,5 +123,5 @@
         </div>
     </div>
 </body>
-
+<script src="../index.js"></script>
 </html>
