--- a/pages/mapa.html
+++ b/pages/mapa.html
@@ -24,6 +24,7 @@
       </div>
 
       <div id="navContent">
+        <a href="./produto.html">PAGINA INICIAL</a>
         <a href="./gradeProdutos.html">PRODUTOS</a>
         <a href="./promocoes.html">PROMOÇÃO</a>
         <a href="./mapa.html">ENDEREÇO</a>
@@ -65,5 +66,5 @@
     </div>
   </div>
 </body>
-
+<script src="../index.js"></script>
 </html>
