--- a/pages/produto.html
+++ b/pages/produto.html
@@ -9,44 +9,44 @@
   </head>
 
   <body>
-    <header>
-      <div id="containerHeader">
-        <a href="../index.html">
-          <img
-            src="https://cdn.iconscout.com/icon/free/png-256/free-imagem-quadrado-3604303-3004161.png?f=webp"
-            alt=""
-            class="logoImages"
-            srcset=""
-          />
-        </a>
+   <header>
+    <div id="containerHeader">
+      <a href="../index.html">
+        <img src="https://cdn.iconscout.com/icon/free/png-256/free-imagem-quadrado-3604303-3004161.png?f=webp" alt=""
+          class="logoImages" />
+      </a>
 
-        <div id="navContent">
-          <a href="./gradeProdutos.html">PRODUTOS</a>
-          <a href="./promocoes.html">PROMOÇÃO</a>
-          <a href="./mapa.html">ENDEREÇO</a>
-          <a href="./sobre.html">SOBRE</a>
-          <input id="searchBar" type="text" placeholder="Pesquisar..." />
-        </div>
-
-        <div id="figures">
-          <figure>
-            <img
-              src="https://cdn-icons-png.freepik.com/256/6644/6644782.png?semt=ais_incoming"
-              class="logoImages"
-              alt=""
-            />
-          </figure>
-
-          <figure>
-            <img
-              src="https://images.vexels.com/media/users/3/137047/isolated/lists/5831a17a290077c646a48c4db78a81bb-user-profile-blue-icon.png"
-              class="logoImages"
-              alt=""
-            />
-          </figure>
-        </div>
+      <div id="menu-toggle" aria-label="Menu" aria-expanded="false" role="button" tabindex="0">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
       </div>
-    </header>
+
+      <div id="navContent">
+        <a href="./produto.html">PAGINA INICIAL</a>
+        <a href="./gradeProdutos.html">PRODUTOS</a>
+        <a href="./promocoes.html">PROMOÇÃO</a>
+        <a href="./mapa.html">ENDEREÇO</a>
+        <a href="./sobre.html">SOBRE</a>
+      </div>
+
+      <input id="searchBar" type="text" placeholder="Pesquisar..." />
+
+      <div id="figures">
+        <figure>
+          <img src="../images/carrinhoIMG.png" class="logoImages" />
+        </figure>
+        <figure>
+          <a href="./cadastro.html">
+            <img
+              src="../images/profileIMG.png"
+              class="logoImages" />
+          </a>
+        </figure>
+      </div>
+    </div>
+  </header>
+
 
     <div id="tabela-Main">
       <table>
@@ -104,4 +104,5 @@
       </table>
     </div>
   </body>
+  <script src="../index.js"></script>
 </html>
