--- a/pages/promocoes.html
+++ b/pages/promocoes.html
@@ -6,10 +6,16 @@
     <title>Document</title>
     <link rel="stylesheet" href="../css/headertest.css" />
     <style>
+
+      * {
+        margin: 0;
+        padding: 0;        
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      }
+
       body {
-        background-color: #347fdc;
-        color: #fff;
-        font-family: Arial, Helvetica, sans-serif;
+        background: linear-gradient(100deg, #347fdc, #5aa9f7);
+        color: #fff;        
         place-self: center;
       }
 
@@ -60,49 +66,44 @@
   </head>
 
   <body>
-    <header>
-      <div id="containerHeader">
-        <a href="../index.html">
-          <img
-            src="https://cdn.iconscout.com/icon/free/png-256/free-imagem-quadrado-3604303-3004161.png?f=webp"
-            alt=""
-            class="logoImages"
-          />
-        </a>
+   <header>
+    <div id="containerHeader">
+      <a href="../index.html">
+        <img src="https://cdn.iconscout.com/icon/free/png-256/free-imagem-quadrado-3604303-3004161.png?f=webp" alt=""
+          class="logoImages" />
+      </a>
 
-        <div
-          id="menu-toggle"
-          aria-label="Menu"
-          aria-expanded="false"
-          role="button"
-          tabindex="0"
-        >
-          <span class="bar"></span>
-          <span class="bar"></span>
-          <span class="bar"></span>
-        </div>
-
-        <div id="navContent">
-          <a href="./gradeProdutos.html">PRODUTOS</a>
-          <a href="./promocoes.html">PROMOÇÃO</a>
-          <a href="./mapa.html">ENDEREÇO</a>
-          <a href="./sobre.html">SOBRE</a>
-        </div>
-
-        <input id="searchBar" type="text" placeholder="Pesquisar..." />
-
-        <div id="figures">
-          <figure>
-            <img src="../images/carrinhoIMG.png" class="logoImages" />
-          </figure>
-          <figure>
-            <a href="./cadastro.html">
-              <img src="../images/profileIMG.png" class="logoImages" />
-            </a>
-          </figure>
-        </div>
+      <div id="menu-toggle" aria-label="Menu" aria-expanded="false" role="button" tabindex="0">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
       </div>
-    </header>
+
+      <div id="navContent">
+        <a href="./produto.html">PAGINA INICIAL</a>
+        <a href="./gradeProdutos.html">PRODUTOS</a>
+        <a href="./promocoes.html">PROMOÇÃO</a>
+        <a href="./mapa.html">ENDEREÇO</a>
+        <a href="./sobre.html">SOBRE</a>
+      </div>
+
+      <input id="searchBar" type="text" placeholder="Pesquisar..." />
+
+      <div id="figures">
+        <figure>
+          <img src="../images/carrinhoIMG.png" class="logoImages" />
+        </figure>
+        <figure>
+          <a href="./cadastro.html">
+            <img
+              src="../images/profileIMG.png"
+              class="logoImages" />
+          </a>
+        </figure>
+      </div>
+    </div>
+  </header>
+
     <h1>PROMOÇÃO IMPERDÍVEL!</h1>
     <section class="produto">
       <div class="grid">
@@ -123,4 +124,5 @@
       </div>
     </section>
   </body>
+  <script src="../index.js"></script>
 </html>
