--- a/pages/mapa.html
+++ b/pages/mapa.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 
 <head>
   <meta charset="UTF-8" />
@@ -35,13 +35,13 @@
 
       <div id="figures">
         <figure>
-          <img src="../images/carrinhoIMG.png" class="logoImages" />
+          <a href="./carrinho.html">
+            <img src="../images/carrinhoIMG.png" class="logoImages" />
+          </a>
         </figure>
         <figure>
           <a href="./cadastro.html">
-            <img
-              src="../images/profileIMG.png"
-              class="logoImages" />
+            <img src="../images/profileIMG.png" class="logoImages" />
           </a>
         </figure>
       </div>
@@ -67,4 +67,5 @@
   </div>
 </body>
 <script src="../index.js"></script>
+
 </html>
