--- a/pages/gradeProdutos.html
+++ b/pages/gradeProdutos.html
@@ -2,15 +2,15 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CampuStore</title>
-    <link rel="stylesheet" href="../css/grade.css">
-    <link rel="stylesheet" href="../css/headertest.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>CampuStore</title>
+  <link rel="stylesheet" href="../css/grade.css">
+  <link rel="stylesheet" href="../css/headertest.css">
 </head>
 
 <body>
- <header>
+  <header>
     <div id="containerHeader">
       <a href="../index.html">
         <img src="https://cdn.iconscout.com/icon/free/png-256/free-imagem-quadrado-3604303-3004161.png?f=webp" alt=""
@@ -35,93 +35,107 @@
 
       <div id="figures">
         <figure>
-          <img src="../images/carrinhoIMG.png" class="logoImages" />
+          <a href="./carrinho.html">
+            <img src="../images/carrinhoIMG.png" class="logoImages" />
+          </a>
         </figure>
         <figure>
           <a href="./cadastro.html">
-            <img
-              src="../images/profileIMG.png"
-              class="logoImages" />
+            <img src="../images/profileIMG.png" class="logoImages" />
           </a>
         </figure>
       </div>
     </div>
   </header>
 
-
-    <div class="grid">
-        <div class="produto">
-            <img class="img-produto" src="../images/caderno_1.jpg" alt="Imagem Não Encontrada">
-            <a class="nome-produto" href="">Caderno 160 folhas</a>
-            <p class="preco">R$27,90</p>
-        </div>
-
-        <div class="produto">
-            <img class="img-produto" src="../images/caderno_2.jpg" alt="Imagem Não Encontrada">
-            <a class="nome-produto" href="">Caderno 200 folhas</a>
-            <p class="preco">R$32,00</p>
-        </div>
-
-        <div class="produto">
-            <img class="img-produto" src="../images/notebook_lenovo_ideapad.jpg" alt="Imagem Não Encontrada">
-            <a class="nome-produto" href="">Notebook Lenovo</a>
-            <p class="preco">R$2.390,00</p>
-        </div>
-
-        <div class="produto">
-            <img class="img-produto" src="../images/caderno_3.jpg" alt="Imagem Não Encontrada">
-            <a class="nome-produto" href="">Caderno 200 folhas</a>
-            <p class="preco">R$34,00</p>
-        </div>
-
-        <div class="produto">
-            <img class="img-produto" src="../images/fone_jbl.jpg" alt="Imagem Não Encontrada">
-            <a class="nome-produto" href="">Fone de Ouvido JBL</a>
-            <p class="preco">R$ 249,00</p>
-        </div>
-
-        <div class="produto">
-            <img class="img-produto" src="../images/notebook_samsung.jpg" alt="Imagem Não Encontrada">
-            <a class="nome-produto" href="">Notebook Samsung</a>
-            <p class="preco">R$ 3013,49</p>
-        </div>
-
-        <div class="produto">
-            <img class="img-produto" src="../images/notebook_acer.jpg" alt="Imagem Não Encontrada">
-            <a class="nome-produto" href="">Notebook Acer</a>
-            <p class="preco">R$ 3029,10</p>
-        </div>
-
-        <div class="produto">
-            <img class="img-produto" src="../images/o_principe.jpg" alt="Imagem Não Encontrada">
-            <a class="nome-produto" href="">Livro: O Príncipe</a>
-            <p class="preco">R$ 59,90</p>
-        </div>
-
-        <div class="produto">
-            <img class="img-produto" src="../images/o_mito_da_caverna.jpg" alt="Imagem Não Encontrada">
-            <a class="nome-produto" href="">Livro: O Mito Da Caverna</a>
-            <p class="preco">R$ 48,56</p>
-        </div>
-
-        <div class="produto">
-            <img class="img-produto" src="../images/fone_philips.jpg" alt="Imagem Não Encontrada">
-            <a class="nome-produto" href="">Fone de Ouvido Philips</a>
-            <p class="preco">R$ 140,99</p>
-        </div>
-
-        <div class="produto">
-            <img class="img-produto" src="../images/livro_arq_computadores.jpg" alt="Imagem Não Encontrada">
-            <a class="nome-produto" href="">Livro: Arq. Computadores</a>
-            <p class="preco">R$ 119,00</p>
-        </div>
-
-        <div class="produto">
-            <img class="img-produto" src="../images/mochila.jpg" alt="Imagem Não Encontrada">
-            <a class="nome-produto" href="">Mochila</a>
-            <p class="preco">R$ 252,99</p>
-        </div>
+  <div class="grid">
+    <div class="produto">
+      <img class="img-produto" src="../images/caderno_1.jpg" alt="Imagem Não Encontrada">
+      <a class="nome-produto" href="#">Caderno 160 folhas</a>
+      <p class="preco">R$27,90</p>
     </div>
+
+    <div class="produto">
+      <img class="img-produto" src="../images/caderno_2.jpg" alt="Imagem Não Encontrada">
+      <a class="nome-produto" href="#">Caderno 200 folhas</a>
+      <p class="preco">R$32,00</p>
+    </div>
+
+    <div class="produto">
+      <img class="img-produto" src="../images/notebook_lenovo_ideapad.jpg" alt="Imagem Não Encontrada">
+      <a class="nome-produto" href="#">Notebook Lenovo</a>
+      <p class="preco">R$2.390,00</p>
+    </div>
+
+    <div class="produto">
+      <img class="img-produto" src="../images/caderno_3.jpg" alt="Imagem Não Encontrada">
+      <a class="nome-produto" href="#">Caderno 200 folhas</a>
+      <p class="preco">R$34,00</p>
+    </div>
+
+    <div class="produto">
+      <img class="img-produto" src="../images/fone_jbl.jpg" alt="Imagem Não Encontrada">
+      <a class="nome-produto" href="#">Fone de Ouvido JBL</a>
+      <p class="preco">R$ 249,00</p>
+    </div>
+
+    <div class="produto">
+      <img class="img-produto" src="../images/notebook_samsung.jpg" alt="Imagem Não Encontrada">
+      <a class="nome-produto" href="#">Notebook Samsung</a>
+      <p class="preco">R$ 3013,49</p>
+    </div>
+
+    <div class="produto">
+      <img class="img-produto" src="../images/notebook_acer.jpg" alt="Imagem Não Encontrada">
+      <a class="nome-produto" href="#">Notebook Acer</a>
+      <p class="preco">R$ 3029,10</p>
+    </div>
+
+    <div class="produto">
+      <img class="img-produto" src="../images/o_principe.jpg" alt="Imagem Não Encontrada">
+      <a class="nome-produto" href="#">Livro: O Príncipe</a>
+      <p class="preco">R$ 59,90</p>
+    </div>
+
+    <div class="produto">
+      <img class="img-produto" src="../images/o_mito_da_caverna.jpg" alt="Imagem Não Encontrada">
+      <a class="nome-produto" href="#">Livro: O Mito Da Caverna</a>
+      <p class="preco">R$ 48,56</p>
+    </div>
+
+    <div class="produto">
+      <img class="img-produto" src="../images/fone_philips.jpg" alt="Imagem Não Encontrada">
+      <a class="nome-produto" href="#">Fone de Ouvido Philips</a>
+      <p class="preco">R$ 140,99</p>
+    </div>
+
+    <div class="produto">
+      <img class="img-produto" src="../images/livro_arq_computadores.jpg" alt="Imagem Não Encontrada">
+      <a class="nome-produto" href="#">Livro: Arq. Computadores</a>
+      <p class="preco">R$ 119,00</p>
+    </div>
+
+    <div class="produto">
+      <img class="img-produto" src="../images/mochila.jpg" alt="Imagem Não Encontrada">
+      <a class="nome-produto" href="#">Mochila</a>
+      <p class="preco">R$ 252,99</p>
+    </div>
+  </div>
 </body>
 <script src="../index.js"></script>
+<script>
+  document.querySelectorAll('.produto').forEach(produto => {
+    produto.addEventListener('click', function () {
+      const nome = this.querySelector('.nome-produto').innerText;
+      const preco = this.querySelector('.preco').innerText.replace('R$', '').trim();
+
+      let carrinho = JSON.parse(localStorage.getItem('carrinho')) || [];
+      carrinho.push({ nome, preco });
+      localStorage.setItem('carrinho', JSON.stringify(carrinho));
+
+      alert(`${nome} adicionado ao carrinho!`);
+    });
+  });
+</script>
+
 </html>
