--- a/pages/promocoes.html
+++ b/pages/promocoes.html
@@ -4,65 +4,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Document</title>
+  <title>CampuStore</title>
   <link rel="stylesheet" href="../css/headertest.css" />
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    }
-
-    body {
-      background: linear-gradient(100deg, #347fdc, #5aa9f7);
-      color: #fff;
-      place-self: center;
-    }
-
-    h1 {
-      text-align: center;
-      padding-top: 100px;
-    }
-
-    .produto {
-      background-color: #3d5ac2;
-      width: 1200px;
-      height: 500px;
-      place-content: center center;
-      border-radius: 4px;
-      padding: 0px 40px;
-    }
-
-    .grid {
-      display: grid;
-      place-self: center left;
-      grid-template-columns: auto 1fr;
-      gap: 60px;
-    }
-
-    #img-Promo {
-      width: 400px;
-      height: 400px;
-      border-radius: 4px;
-    }
-
-    .info {
-      grid-column: 2;
-    }
-
-    .nome-produto {
-      font-size: 48px;
-      margin: 0px;
-    }
-
-    .preco-com-desconto {
-      font-size: 30px;
-    }
-
-    .preco_sem_desconto {
-      text-decoration: line-through;
-    }
-  </style>
+  <link rel="stylesheet" href="../css/promocoes.css">
 </head>
 
 <body>
@@ -107,19 +51,20 @@
   <h1>PROMOÇÃO IMPERDÍVEL!</h1>
   <section class="produto">
     <div class="grid">
-      <img src="../images/fone_philips.jpg" alt="" id="img-Promo" />
+      <img src="../images/macbook.jpg" alt="" id="img-Promo" />
       <div class="info">
-        <p class="nome-produto">Produto tal tal tal</p>
+        <p class="nome-produto">Apple 2024 MacBook Air</p>
         <p>
-          <span class="preco-com-desconto">R$390,99</span> de
-          <span class="preco_sem_desconto">R$999,00</span>
+          <span class="preco-com-desconto">R$8.599,98</span> de
+          <span class="preco_sem_desconto">R$13.399,00</span>
         </p>
         <p>
-          Descrição detalhada do produto, com o objetivo de fazer o consumir
-          gastar seu suado salarinho em algo que ele vai usar 2 vezes antes de
-          estragar
+          MacBook Air 13" com chip Apple M3. Desempenho poderoso em um design ultrafino. Tela Retina vibrante, bateria
+          de longa duração e toda a performance que você precisa para trabalhar, estudar ou criar, onde estiver. Ideal
+          para quem busca velocidade, portabilidade e elegância.
         </p>
-        <button>Comprar</button>
+        <p class="porcentagem">Garanta 36% de desconto!</p>
+        <button>Adicionar ao Carrinho</button>
       </div>
     </div>
   </section>
