--- a/pages/produto.html
+++ b/pages/produto.html
@@ -52,7 +52,7 @@
     <table id="tableProductos">
       <tr>
         <th>Produtos</th>
-        <th>Valor</th>
+        <th id="valorHeader" style="cursor: pointer;">Valor &#x25B2;</th>
         <th id="quantidadeHeader" style="cursor: pointer">
           Quantidade &#x25B2;
         </th>
