--- a/pages/carrinho.html
+++ b/pages/carrinho.html
@@ -1,85 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" href="../images/Media.png" type="image/png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Carrinho</title>
-    <link rel="stylesheet" href="../css/carrinho.css">
-    <link rel="stylesheet" href="../css/headertest.css">
-</head>
+    <link rel="stylesheet" href="../css/carrinho.css" />
+    <link rel="stylesheet" href="../css/headertest.css" />
+  </head>
 
-<body>
-
+  <body>
     <div class="divGoBack">
-        <a href="javascript:void(0);" onclick="window.history.back()"
-            style="text-decoration: none; color: white;">Voltar</a>
+      <a
+        href="javascript:void(0);"
+        onclick="window.history.back()"
+        style="text-decoration: none; color: white"
+        >Voltar</a
+      >
     </div>
 
     <div class="container">
-        <div class="header">
-            <div class="cart-icon">
-                <img src="../images/carrinho.png">
-            </div>
-            <button class="buttonPagar"><span>PAGAR</span></button>
+      <div class="header">
+        <div class="cart-icon">
+          <img src="../images/carrinho.png" />
         </div>
+        <button class="buttonPagar"><span>PAGAR</span></button>
+      </div>
 
-        <div class="item">
-            <div id="carrinho-itens"></div>
-        </div>
+      <div class="item">
+        <div id="carrinho-itens"></div>
+      </div>
     </div>
 
     <div id="total-container">
-        <h3>Total: R$ <span id="total">0.00</span></h3>
+      <h3>Total: R$ <span id="total">0.00</span></h3>
     </div>
-
-</body>
-<script src="../index.js"></script>
-<script>
-    const carrinhoContainer = document.getElementById('carrinho-itens');
-    const totalContainer = document.getElementById('total');
-    const carrinho = JSON.parse(localStorage.getItem('carrinho')) || [];
+  </body>
+  <script src="../index.js"></script>
+  <script>
+    const carrinhoContainer = document.getElementById("carrinho-itens");
+    const totalContainer = document.getElementById("total");
+    const carrinho = JSON.parse(localStorage.getItem("carrinho")) || [];
 
     function calcularTotal() {
-        return carrinho.reduce((acc, item) => acc + parseFloat(item.preco.replace(',', '.')), 0).toFixed(2);
+      return carrinho
+        .reduce(
+          (acc, item) => acc + parseFloat(item.preco.replace(",", ".")),
+          0
+        )
+        .toFixed(2);
     }
 
     function renderCarrinho() {
-        carrinhoContainer.innerHTML = '';
-        if (carrinho.length === 0) {
-            carrinhoContainer.innerHTML = "<p>O carrinho está vazio.</p>";
-            totalContainer.textContent = "0.00";
-        } else {
-            carrinho.forEach((item, index) => {
-                const div = document.createElement('div');
-                div.classList.add('item');
-                div.innerHTML = `
+      carrinhoContainer.innerHTML = "";
+      if (carrinho.length === 0) {
+        carrinhoContainer.innerHTML = "<p>O carrinho está vazio.</p>";
+        totalContainer.textContent = "0.00";
+      } else {
+        carrinho.forEach((item, index) => {
+          const div = document.createElement("div");
+          div.classList.add("item");
+          div.innerHTML = `
             <strong>${item.nome}</strong> - R$ ${item.preco}
             <br>
             <button class="remover" data-index="${index}">Remover</button>
           `;
-                carrinhoContainer.appendChild(div);
-            });
-            totalContainer.textContent = calcularTotal();
-        }
+          carrinhoContainer.appendChild(div);
+        });
+        totalContainer.textContent = calcularTotal();
+      }
     }
 
     renderCarrinho();
 
-    carrinhoContainer.addEventListener('click', function (e) {
-        if (e.target.classList.contains('remover')) {
-            const index = e.target.getAttribute('data-index');
-            carrinho.splice(index, 1);
-            localStorage.setItem('carrinho', JSON.stringify(carrinho));
-            renderCarrinho();
-        }
+    carrinhoContainer.addEventListener("click", function (e) {
+      if (e.target.classList.contains("remover")) {
+        const index = e.target.getAttribute("data-index");
+        carrinho.splice(index, 1);
+        localStorage.setItem("carrinho", JSON.stringify(carrinho));
+        renderCarrinho();
+      }
     });
 
-    document.querySelector('.buttonPagar').addEventListener('click', () => {
-        localStorage.removeItem('carrinho');
-        alert("Compra finalizada!");
-        location.reload();
+    document.querySelector(".buttonPagar").addEventListener("click", () => {
+      localStorage.removeItem("carrinho");
+      alert("Compra finalizada!");
+      location.reload();
     });
-</script>
-
+  </script>
 </html>
