--- a/pages/gradeProdutos.html
+++ b/pages/gradeProdutos.html
@@ -1,141 +1,195 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" href="../images/Media.png" type="image/png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>CampuStore</title>
+    <link rel="stylesheet" href="../css/grade.css" />
+    <link rel="stylesheet" href="../css/headertest.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CampuStore</title>
-  <link rel="stylesheet" href="../css/grade.css">
-  <link rel="stylesheet" href="../css/headertest.css">
-</head>
+  <body>
+    <header>
+      <div id="containerHeader">
+        <a href="../index.html">
+          <img src="../images/Media.png" alt="" class="logoImages" />
+        </a>
 
-<body>
-  <header>
-    <div id="containerHeader">
-      <a href="../index.html">
-        <img src="https://cdn.iconscout.com/icon/free/png-256/free-imagem-quadrado-3604303-3004161.png?f=webp" alt=""
-          class="logoImages" />
-      </a>
+        <div
+          id="menu-toggle"
+          aria-label="Menu"
+          aria-expanded="false"
+          role="button"
+          tabindex="0"
+        >
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+        </div>
 
-      <div id="menu-toggle" aria-label="Menu" aria-expanded="false" role="button" tabindex="0">
-        <span class="bar"></span>
-        <span class="bar"></span>
-        <span class="bar"></span>
+        <div id="navContent">
+          <a href="./produto.html">PAGINA INICIAL</a>
+          <a href="./gradeProdutos.html">PRODUTOS</a>
+          <a href="./promocoes.html">PROMOÇÃO</a>
+          <a href="./mapa.html">ENDEREÇO</a>
+          <a href="./sobre.html">SOBRE</a>
+        </div>
+
+        <input id="searchBar" type="text" placeholder="Pesquisar..." />
+
+        <div id="figures">
+          <figure>
+            <a href="./carrinho.html">
+              <img src="../images/carrinhoIMG.png" class="logoImages" />
+            </a>
+          </figure>
+          <figure>
+            <a href="./cadastro.html">
+              <img src="../images/profileIMG.png" class="logoImages" />
+            </a>
+          </figure>
+        </div>
+      </div>
+    </header>
+
+    <div class="grid">
+      <div class="produto">
+        <img
+          class="img-produto"
+          src="../images/caderno_1.jpg"
+          alt="Imagem Não Encontrada"
+        />
+        <a class="nome-produto" href="#">Caderno 160 folhas</a>
+        <p class="preco">R$27,90</p>
       </div>
 
-      <div id="navContent">
-        <a href="./produto.html">PAGINA INICIAL</a>
-        <a href="./gradeProdutos.html">PRODUTOS</a>
-        <a href="./promocoes.html">PROMOÇÃO</a>
-        <a href="./mapa.html">ENDEREÇO</a>
-        <a href="./sobre.html">SOBRE</a>
+      <div class="produto">
+        <img
+          class="img-produto"
+          src="../images/caderno_2.jpg"
+          alt="Imagem Não Encontrada"
+        />
+        <a class="nome-produto" href="#">Caderno 200 folhas</a>
+        <p class="preco">R$32,00</p>
       </div>
 
-      <input id="searchBar" type="text" placeholder="Pesquisar..." />
+      <div class="produto">
+        <img
+          class="img-produto"
+          src="../images/notebook_lenovo_ideapad.jpg"
+          alt="Imagem Não Encontrada"
+        />
+        <a class="nome-produto" href="#">Notebook Lenovo</a>
+        <p class="preco">R$2.390,00</p>
+      </div>
 
-      <div id="figures">
-        <figure>
-          <a href="./carrinho.html">
-            <img src="../images/carrinhoIMG.png" class="logoImages" />
-          </a>
-        </figure>
-        <figure>
-          <a href="./cadastro.html">
-            <img src="../images/profileIMG.png" class="logoImages" />
-          </a>
-        </figure>
+      <div class="produto">
+        <img
+          class="img-produto"
+          src="../images/caderno_3.jpg"
+          alt="Imagem Não Encontrada"
+        />
+        <a class="nome-produto" href="#">Caderno 200 folhas</a>
+        <p class="preco">R$34,00</p>
+      </div>
+
+      <div class="produto">
+        <img
+          class="img-produto"
+          src="../images/fone_jbl.jpg"
+          alt="Imagem Não Encontrada"
+        />
+        <a class="nome-produto" href="#">Fone de Ouvido JBL</a>
+        <p class="preco">R$ 249,00</p>
+      </div>
+
+      <div class="produto">
+        <img
+          class="img-produto"
+          src="../images/notebook_samsung.jpg"
+          alt="Imagem Não Encontrada"
+        />
+        <a class="nome-produto" href="#">Notebook Samsung</a>
+        <p class="preco">R$ 3013,49</p>
+      </div>
+
+      <div class="produto">
+        <img
+          class="img-produto"
+          src="../images/notebook_acer.jpg"
+          alt="Imagem Não Encontrada"
+        />
+        <a class="nome-produto" href="#">Notebook Acer</a>
+        <p class="preco">R$ 3029,10</p>
+      </div>
+
+      <div class="produto">
+        <img
+          class="img-produto"
+          src="../images/o_principe.jpg"
+          alt="Imagem Não Encontrada"
+        />
+        <a class="nome-produto" href="#">Livro: O Príncipe</a>
+        <p class="preco">R$ 59,90</p>
+      </div>
+
+      <div class="produto">
+        <img
+          class="img-produto"
+          src="../images/o_mito_da_caverna.jpg"
+          alt="Imagem Não Encontrada"
+        />
+        <a class="nome-produto" href="#">Livro: O Mito Da Caverna</a>
+        <p class="preco">R$ 48,56</p>
+      </div>
+
+      <div class="produto">
+        <img
+          class="img-produto"
+          src="../images/fone_philips.jpg"
+          alt="Imagem Não Encontrada"
+        />
+        <a class="nome-produto" href="#">Fone de Ouvido Philips</a>
+        <p class="preco">R$ 140,99</p>
+      </div>
+
+      <div class="produto">
+        <img
+          class="img-produto"
+          src="../images/livro_arq_computadores.jpg"
+          alt="Imagem Não Encontrada"
+        />
+        <a class="nome-produto" href="#">Livro: Arq. Computadores</a>
+        <p class="preco">R$ 119,00</p>
+      </div>
+
+      <div class="produto">
+        <img
+          class="img-produto"
+          src="../images/mochila.jpg"
+          alt="Imagem Não Encontrada"
+        />
+        <a class="nome-produto" href="#">Mochila</a>
+        <p class="preco">R$ 252,99</p>
       </div>
     </div>
-  </header>
+  </body>
+  <script src="../index.js"></script>
+  <script>
+    document.querySelectorAll(".produto").forEach((produto) => {
+      produto.addEventListener("click", function () {
+        const nome = this.querySelector(".nome-produto").innerText;
+        const preco = this.querySelector(".preco")
+          .innerText.replace("R$", "")
+          .trim();
 
-  <div class="grid">
-    <div class="produto">
-      <img class="img-produto" src="../images/caderno_1.jpg" alt="Imagem Não Encontrada">
-      <a class="nome-produto" href="#">Caderno 160 folhas</a>
-      <p class="preco">R$27,90</p>
-    </div>
+        let carrinho = JSON.parse(localStorage.getItem("carrinho")) || [];
+        carrinho.push({ nome, preco });
+        localStorage.setItem("carrinho", JSON.stringify(carrinho));
 
-    <div class="produto">
-      <img class="img-produto" src="../images/caderno_2.jpg" alt="Imagem Não Encontrada">
-      <a class="nome-produto" href="#">Caderno 200 folhas</a>
-      <p class="preco">R$32,00</p>
-    </div>
-
-    <div class="produto">
-      <img class="img-produto" src="../images/notebook_lenovo_ideapad.jpg" alt="Imagem Não Encontrada">
-      <a class="nome-produto" href="#">Notebook Lenovo</a>
-      <p class="preco">R$2.390,00</p>
-    </div>
-
-    <div class="produto">
-      <img class="img-produto" src="../images/caderno_3.jpg" alt="Imagem Não Encontrada">
-      <a class="nome-produto" href="#">Caderno 200 folhas</a>
-      <p class="preco">R$34,00</p>
-    </div>
-
-    <div class="produto">
-      <img class="img-produto" src="../images/fone_jbl.jpg" alt="Imagem Não Encontrada">
-      <a class="nome-produto" href="#">Fone de Ouvido JBL</a>
-      <p class="preco">R$ 249,00</p>
-    </div>
-
-    <div class="produto">
-      <img class="img-produto" src="../images/notebook_samsung.jpg" alt="Imagem Não Encontrada">
-      <a class="nome-produto" href="#">Notebook Samsung</a>
-      <p class="preco">R$ 3013,49</p>
-    </div>
-
-    <div class="produto">
-      <img class="img-produto" src="../images/notebook_acer.jpg" alt="Imagem Não Encontrada">
-      <a class="nome-produto" href="#">Notebook Acer</a>
-      <p class="preco">R$ 3029,10</p>
-    </div>
-
-    <div class="produto">
-      <img class="img-produto" src="../images/o_principe.jpg" alt="Imagem Não Encontrada">
-      <a class="nome-produto" href="#">Livro: O Príncipe</a>
-      <p class="preco">R$ 59,90</p>
-    </div>
-
-    <div class="produto">
-      <img class="img-produto" src="../images/o_mito_da_caverna.jpg" alt="Imagem Não Encontrada">
-      <a class="nome-produto" href="#">Livro: O Mito Da Caverna</a>
-      <p class="preco">R$ 48,56</p>
-    </div>
-
-    <div class="produto">
-      <img class="img-produto" src="../images/fone_philips.jpg" alt="Imagem Não Encontrada">
-      <a class="nome-produto" href="#">Fone de Ouvido Philips</a>
-      <p class="preco">R$ 140,99</p>
-    </div>
-
-    <div class="produto">
-      <img class="img-produto" src="../images/livro_arq_computadores.jpg" alt="Imagem Não Encontrada">
-      <a class="nome-produto" href="#">Livro: Arq. Computadores</a>
-      <p class="preco">R$ 119,00</p>
-    </div>
-
-    <div class="produto">
-      <img class="img-produto" src="../images/mochila.jpg" alt="Imagem Não Encontrada">
-      <a class="nome-produto" href="#">Mochila</a>
-      <p class="preco">R$ 252,99</p>
-    </div>
-  </div>
-</body>
-<script src="../index.js"></script>
-<script>
-  document.querySelectorAll('.produto').forEach(produto => {
-    produto.addEventListener('click', function () {
-      const nome = this.querySelector('.nome-produto').innerText;
-      const preco = this.querySelector('.preco').innerText.replace('R$', '').trim();
-
-      let carrinho = JSON.parse(localStorage.getItem('carrinho')) || [];
-      carrinho.push({ nome, preco });
-      localStorage.setItem('carrinho', JSON.stringify(carrinho));
-
-      alert(`${nome} adicionado ao carrinho!`);
+        alert(`${nome} adicionado ao carrinho!`);
+      });
     });
-  });
-</script>
-
+  </script>
 </html>
