--- a/pages/promocoes.html
+++ b/pages/promocoes.html
@@ -1,74 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" href="../images/Media.png" type="image/png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>CampuStore</title>
+    <link rel="stylesheet" href="../css/headertest.css" />
+    <link rel="stylesheet" href="../css/promocoes.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>CampuStore</title>
-  <link rel="stylesheet" href="../css/headertest.css" />
-  <link rel="stylesheet" href="../css/promocoes.css">
-</head>
+  <body>
+    <header>
+      <div id="containerHeader">
+        <a href="../index.html">
+          <img src="../images/Media.png" alt="" class="logoImages" />
+        </a>
 
-<body>
-  <header>
-    <div id="containerHeader">
-      <a href="../index.html">
-        <img src="https://cdn.iconscout.com/icon/free/png-256/free-imagem-quadrado-3604303-3004161.png?f=webp" alt=""
-          class="logoImages" />
-      </a>
+        <div
+          id="menu-toggle"
+          aria-label="Menu"
+          aria-expanded="false"
+          role="button"
+          tabindex="0"
+        >
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+        </div>
 
-      <div id="menu-toggle" aria-label="Menu" aria-expanded="false" role="button" tabindex="0">
-        <span class="bar"></span>
-        <span class="bar"></span>
-        <span class="bar"></span>
+        <div id="navContent">
+          <a href="./produto.html">PAGINA INICIAL</a>
+          <a href="./gradeProdutos.html">PRODUTOS</a>
+          <a href="./promocoes.html">PROMOÇÃO</a>
+          <a href="./mapa.html">ENDEREÇO</a>
+          <a href="./sobre.html">SOBRE</a>
+        </div>
+
+        <input id="searchBar" type="text" placeholder="Pesquisar..." />
+
+        <div id="figures">
+          <figure>
+            <a href="./carrinho.html">
+              <img src="../images/carrinhoIMG.png" class="logoImages" />
+            </a>
+          </figure>
+          <figure>
+            <a href="./cadastro.html">
+              <img src="../images/profileIMG.png" class="logoImages" />
+            </a>
+          </figure>
+        </div>
       </div>
+    </header>
 
-      <div id="navContent">
-        <a href="./produto.html">PAGINA INICIAL</a>
-        <a href="./gradeProdutos.html">PRODUTOS</a>
-        <a href="./promocoes.html">PROMOÇÃO</a>
-        <a href="./mapa.html">ENDEREÇO</a>
-        <a href="./sobre.html">SOBRE</a>
+    <h1>PROMOÇÃO IMPERDÍVEL!</h1>
+    <section class="produto">
+      <div class="grid">
+        <img src="../images/macbook.jpg" alt="" id="img-Promo" />
+        <div class="info">
+          <p class="nome-produto">Apple 2024 MacBook Air</p>
+          <p>
+            <span class="preco-com-desconto">R$8.599,98</span> de
+            <span class="preco_sem_desconto">R$13.399,00</span>
+          </p>
+          <p>
+            MacBook Air 13" com chip Apple M3. Desempenho poderoso em um design
+            ultrafino. Tela Retina vibrante, bateria de longa duração e toda a
+            performance que você precisa para trabalhar, estudar ou criar, onde
+            estiver. Ideal para quem busca velocidade, portabilidade e
+            elegância.
+          </p>
+          <p class="porcentagem">Garanta 36% de desconto!</p>
+          <button>Adicionar ao Carrinho</button>
+        </div>
       </div>
-
-      <input id="searchBar" type="text" placeholder="Pesquisar..." />
-
-      <div id="figures">
-        <figure>
-          <a href="./carrinho.html">
-            <img src="../images/carrinhoIMG.png" class="logoImages" />
-          </a>
-        </figure>
-        <figure>
-          <a href="./cadastro.html">
-            <img src="../images/profileIMG.png" class="logoImages" />
-          </a>
-        </figure>
-      </div>
-    </div>
-  </header>
-
-  <h1>PROMOÇÃO IMPERDÍVEL!</h1>
-  <section class="produto">
-    <div class="grid">
-      <img src="../images/macbook.jpg" alt="" id="img-Promo" />
-      <div class="info">
-        <p class="nome-produto">Apple 2024 MacBook Air</p>
-        <p>
-          <span class="preco-com-desconto">R$8.599,98</span> de
-          <span class="preco_sem_desconto">R$13.399,00</span>
-        </p>
-        <p>
-          MacBook Air 13" com chip Apple M3. Desempenho poderoso em um design ultrafino. Tela Retina vibrante, bateria
-          de longa duração e toda a performance que você precisa para trabalhar, estudar ou criar, onde estiver. Ideal
-          para quem busca velocidade, portabilidade e elegância.
-        </p>
-        <p class="porcentagem">Garanta 36% de desconto!</p>
-        <button>Adicionar ao Carrinho</button>
-      </div>
-    </div>
-  </section>
-</body>
-<script src="../index.js"></script>
-
+    </section>
+  </body>
+  <script src="../index.js"></script>
 </html>
