--- a/pages/carrinho.html
+++ b/pages/carrinho.html
@@ -1,91 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" href="../images/Media.png" type="image/png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Carrinho</title>
-    <link rel="stylesheet" href="../css/carrinho.css" />
-    <link rel="stylesheet" href="../css/headertest.css" />
-  </head>
 
-  <body>
-    <div class="divGoBack">
-      <a
-        href="javascript:void(0);"
-        onclick="window.history.back()"
-        style="text-decoration: none; color: white"
-        >Voltar</a
-      >
-    </div>
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" href="../images/Media.png" type="image/png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Carrinho</title>
+  <link rel="stylesheet" href="../css/carrinho.css" />
+  <link rel="stylesheet" href="../css/headertest.css" />
+</head>
 
-    <div class="container">
-      <div class="header">
-        <div class="cart-icon">
-          <img src="../images/carrinho.png" />
-        </div>
-        <button class="buttonPagar"><span>PAGAR</span></button>
+<body>
+  <div class="divGoBack">
+    <a href="javascript:void(0);" onclick="window.history.back()" style="text-decoration: none; color: white">Voltar</a>
+  </div>
+
+  <div class="container">
+    <div class="header">
+      <div class="cart-icon">
+        <img src="../images/carrinho.png" />
       </div>
-
-      <div class="item">
-        <div id="carrinho-itens"></div>
-      </div>
+      <button class="buttonPagar"><span>PAGAR</span></button>
     </div>
 
-    <div id="total-container">
-      <h3>Total: R$ <span id="total">0.00</span></h3>
+    <div class="item">
+      <div id="carrinho-itens"></div>
     </div>
-  </body>
-  <script src="../index.js"></script>
-  <script>
-    const carrinhoContainer = document.getElementById("carrinho-itens");
-    const totalContainer = document.getElementById("total");
-    const carrinho = JSON.parse(localStorage.getItem("carrinho")) || [];
+  </div>
 
-    function calcularTotal() {
-      return carrinho
-        .reduce(
-          (acc, item) => acc + parseFloat(item.preco.replace(",", ".")),
-          0
-        )
-        .toFixed(2);
-    }
+  <div id="total-container">
+    <h3>Total: R$ <span id="total">0.00</span></h3>
+  </div>
+</body>
+<script src="../index.js"></script>
+<script>
+  const carrinhoContainer = document.getElementById("carrinho-itens");
+  const totalContainer = document.getElementById("total");
+  const carrinho = JSON.parse(localStorage.getItem("carrinho")) || [];
 
-    function renderCarrinho() {
-      carrinhoContainer.innerHTML = "";
-      if (carrinho.length === 0) {
-        carrinhoContainer.innerHTML = "<p>O carrinho está vazio.</p>";
-        totalContainer.textContent = "0.00";
-      } else {
-        carrinho.forEach((item, index) => {
-          const div = document.createElement("div");
-          div.classList.add("item");
-          div.innerHTML = `
+  function calcularTotal() {
+    return carrinho
+      .reduce((acc, item) => {        
+        const precoNumerico = parseFloat(item.preco.replace(/\./g, "").replace(",", "."));
+        return acc + precoNumerico;
+      }, 0)
+      .toFixed(2); 
+  }
+
+
+  function renderCarrinho() {
+    carrinhoContainer.innerHTML = "";
+    if (carrinho.length === 0) {
+      carrinhoContainer.innerHTML = "<p>O carrinho está vazio.</p>";
+      totalContainer.textContent = "0.00";
+    } else {
+      carrinho.forEach((item, index) => {
+        const div = document.createElement("div");
+        div.classList.add("item");
+        div.innerHTML = `
             <strong>${item.nome}</strong> - R$ ${item.preco}
             <br>
             <button class="remover" data-index="${index}">Remover</button>
           `;
-          carrinhoContainer.appendChild(div);
-        });
-        totalContainer.textContent = calcularTotal();
-      }
+        carrinhoContainer.appendChild(div);
+      });
+      totalContainer.textContent = calcularTotal();
     }
+  }
 
-    renderCarrinho();
+  renderCarrinho();
 
-    carrinhoContainer.addEventListener("click", function (e) {
-      if (e.target.classList.contains("remover")) {
-        const index = e.target.getAttribute("data-index");
-        carrinho.splice(index, 1);
-        localStorage.setItem("carrinho", JSON.stringify(carrinho));
-        renderCarrinho();
-      }
-    });
+  carrinhoContainer.addEventListener("click", function (e) {
+    if (e.target.classList.contains("remover")) {
+      const index = e.target.getAttribute("data-index");
+      carrinho.splice(index, 1);
+      localStorage.setItem("carrinho", JSON.stringify(carrinho));
+      renderCarrinho();
+    }
+  });
 
-    document.querySelector(".buttonPagar").addEventListener("click", () => {
-      localStorage.removeItem("carrinho");
-      alert("Compra finalizada!");
-      location.reload();
-    });
-  </script>
+  document.querySelector(".buttonPagar").addEventListener("click", () => {
+    if (carrinho.length === 0) {
+      alert("O carrinho está vazio. Adicione itens antes de finalizar a compra.");
+      return;
+    }
+    localStorage.removeItem("carrinho");
+    alert("Compra finalizada!");
+    location.reload();
+  });
+
+</script>
+
 </html>
