--- a/pages/cadastro.html
+++ b/pages/cadastro.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="../images/Media.png" type="image/png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Cadastro</title>
+    <title>Cadastro - CampusStore</title>
     <link rel="stylesheet" href="../css/cadastro.css" />
   </head>
   <body>
