--- a/pages/carrinho.html
+++ b/pages/carrinho.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" href="../images/Media.png" type="image/png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Carrinho</title>
+  <title>Carrinho - CampusStore</title>
   <link rel="stylesheet" href="../css/carrinho.css" />
   <link rel="stylesheet" href="../css/headertest.css" />
 </head>
