--- a/pages/produto.html
+++ b/pages/produto.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="../images/Media.png" type="image/png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TabelasProdutos</title>
+    <title>Tabelas Produtos - CampusStore</title>
     <link rel="stylesheet" href="../css/produto.css" />
     <link rel="stylesheet" href="../css/headertest.css" />
   </head>
