--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -29,12 +29,12 @@
         </div>
 
         <div id="navContent">
-          <a href="./produto.html">PAGINA INICIAL</a>
-          <a href="./gradeProdutos.html">PRODUTOS</a>
+          <a href="./gradeProdutos.html">PAGINA INICIAL</a>
+          <a href="./produto.html">Tabela Produtos</a>
           <a href="./promocoes.html">PROMOÇÃO</a>
           <a href="./mapa.html">ENDEREÇO</a>
           <a href="./sobre.html">SOBRE</a>
-        </div>        
+        </div>
 
         <div id="figures">
           <figure>
