--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </div>
 
       <div class="menu">
-        <a href="./pages/gradeProdutos.html">
+        <a href="./pages/produtos.html">
           <div class="item">
             <div class="icon"><i class="fas fa-home"></i></div>
             <span>Início</span>
@@ -36,10 +36,10 @@
             <span>Promoções</span>
           </div>
         </a>
-        <a href="./pages/produto.html">
+        <a href="./pages/gradeProdutos.html">
           <div class="item">
             <div class="icon"><i class="fas fa-boxes"></i></div>
-            <span>Tabela Produtos</span>
+            <span>Produtos</span>
           </div>
         </a>
         <a href="./pages/sobre.html">
