--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </div>
 
       <div class="menu">
-        <a href="./pages/produtos.html">
+        <a href="./pages/produto.html">
           <div class="item">
             <div class="icon"><i class="fas fa-home"></i></div>
             <span>Início</span>
